src-tauri/build_error.txt
[1m[92m    Checking[0m app v0.1.0 (D:\PhpMyAdmin-Native\src-tauri)
[1m[93mwarning[0m[1m[97m: unused import: `Conn`[0m
 [1m[96m--> [0msrc\lib.rs:2:19
  [1m[96m|[0m
[1m[96m2[0m [1m[96m|[0m use mysql_async::{Conn, Opts, Pool};
  [1m[96m|[0m                   [1m[93m^^^^[0m
  [1m[96m|[0m
  [1m[96m= [0m[1m[97mnote[0m: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

[1m[91merror[E0599][0m[1m[97m: no method named `name_str` found for reference `&Arc<[Column]>` in the current scope[0m
   [1m[96m--> [0msrc\lib.rs:125:26
    [1m[96m|[0m
[1m[96m125[0m [1m[96m|[0m         columns.push(col.name_str().to_string());
    [1m[96m|[0m                          [1m[91m^^^^^^^^[0m [1m[91mmethod not found in `&Arc<[Column]>`[0m

[1m[91merror[0m[1m[97m: future cannot be sent between threads safely[0m
   [1m[96m--> [0msrc\lib.rs:82:1
    [1m[96m|[0m
 [1m[96m82[0m [1m[96m|[0m   #[tauri::command]
    [1m[96m|[0m   [1m[91m^^^^^^^^^^^^^^^^^[0m [1m[91mfuture returned by `get_databases` is not `Send`[0m
[1m[96m...[0m
[1m[96m184[0m [1m[96m|[0m           .invoke_handler(tauri::generate_handler![
    [1m[96m|[0m [1m[96m _________________________-[0m
[1m[96m185[0m [1m[96m|[0m [1m[96m|[0m             connect_db, 
[1m[96m186[0m [1m[96m|[0m [1m[96m|[0m             get_databases, 
[1m[96m187[0m [1m[96m|[0m [1m[96m|[0m             get_tables, 
[1m[96m...[0m   [1m[96m|[0m
[1m[96m190[0m [1m[96m|[0m [1m[96m|[0m             save_server
[1m[96m191[0m [1m[96m|[0m [1m[96m|[0m         ])
    [1m[96m|[0m [1m[96m|_________-[0m [1m[96min this macro invocation[0m
    [1m[96m|[0m
    [1m[96m= [0m[1m[97mhelp[0m: within `impl Future<Output = Result<Vec<DatabaseInfo>, std::string::String>>`, the trait `Send` is not implemented for `std::sync::MutexGuard<'_, std::option::Option<Pool>>`
[1m[92mnote[0m: future is not `Send` as this value is used across an await
   [1m[96m--> [0msrc\lib.rs:86:36
    [1m[96m|[0m
 [1m[96m84[0m [1m[96m|[0m     let pool_guard = state.pool.lock().unwrap();
    [1m[96m|[0m         [1m[96m----------[0m [1m[96mhas type `std::sync::MutexGuard<'_, std::option::Option<Pool>>` which is not `Send`[0m
 [1m[96m85[0m [1m[96m|[0m     let pool = pool_guard.as_ref().ok_or("Not connected")?;
 [1m[96m86[0m [1m[96m|[0m     let mut conn = pool.get_conn().await.map_err(|e| e.to_string())?;
    [1m[96m|[0m                                    [1m[92m^^^^^[0m [1m[92mawait occurs here, with `pool_guard` maybe used later[0m
[1m[92mnote[0m: required by a bound in `ResultFutureTag::future`
   [1m[96m--> [0mC:\Users\ahtes\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.9.5\src\ipc\command.rs:314:42
    [1m[96m|[0m
[1m[96m310[0m [1m[96m|[0m     pub async fn future<T, E, F>(self, value: F) -> Result<InvokeResponseBody, InvokeError>
    [1m[96m|[0m                  [1m[96m------[0m [1m[96mrequired by a bound in this associated function[0m
[1m[96m...[0m
[1m[96m314[0m [1m[96m|[0m       F: Future<Output = Result<T, E>> + Send,
    [1m[96m|[0m                                          [1m[92m^^^^[0m [1m[92mrequired by this bound in `ResultFutureTag::future`[0m
    [1m[96m= [0m[1m[97mnote[0m: this error originates in the macro `__cmd__get_databases` which comes from the expansion of the macro `tauri::generate_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

[1m[91merror[0m[1m[97m: future cannot be sent between threads safely[0m
   [1m[96m--> [0msrc\lib.rs:98:1
    [1m[96m|[0m
 [1m[96m98[0m [1m[96m|[0m   #[tauri::command]
    [1m[96m|[0m   [1m[91m^^^^^^^^^^^^^^^^^[0m [1m[91mfuture returned by `get_tables` is not `Send`[0m
[1m[96m...[0m
[1m[96m184[0m [1m[96m|[0m           .invoke_handler(tauri::generate_handler![
    [1m[96m|[0m [1m[96m _________________________-[0m
[1m[96m185[0m [1m[96m|[0m [1m[96m|[0m             connect_db, 
[1m[96m186[0m [1m[96m|[0m [1m[96m|[0m             get_databases, 
[1m[96m187[0m [1m[96m|[0m [1m[96m|[0m             get_tables, 
[1m[96m...[0m   [1m[96m|[0m
[1m[96m190[0m [1m[96m|[0m [1m[96m|[0m             save_server
[1m[96m191[0m [1m[96m|[0m [1m[96m|[0m         ])
    [1m[96m|[0m [1m[96m|_________-[0m [1m[96min this macro invocation[0m
    [1m[96m|[0m
    [1m[96m= [0m[1m[97mhelp[0m: within `impl Future<Output = Result<Vec<TableInfo>, std::string::String>>`, the trait `Send` is not implemented for `std::sync::MutexGuard<'_, std::option::Option<Pool>>`
[1m[92mnote[0m: future is not `Send` as this value is used across an await
   [1m[96m--> [0msrc\lib.rs:102:36
    [1m[96m|[0m
[1m[96m100[0m [1m[96m|[0m     let pool_guard = state.pool.lock().unwrap();
    [1m[96m|[0m         [1m[96m----------[0m [1m[96mhas type `std::sync::MutexGuard<'_, std::option::Option<Pool>>` which is not `Send`[0m
[1m[96m101[0m [1m[96m|[0m     let pool = pool_guard.as_ref().ok_or("Not connected")?;
[1m[96m102[0m [1m[96m|[0m     let mut conn = pool.get_conn().await.map_err(|e| e.to_string())?;
    [1m[96m|[0m                                    [1m[92m^^^^^[0m [1m[92mawait occurs here, with `pool_guard` maybe used later[0m
[1m[92mnote[0m: required by a bound in `ResultFutureTag::future`
   [1m[96m--> [0mC:\Users\ahtes\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.9.5\src\ipc\command.rs:314:42
    [1m[96m|[0m
[1m[96m310[0m [1m[96m|[0m     pub async fn future<T, E, F>(self, value: F) -> Result<InvokeResponseBody, InvokeError>
    [1m[96m|[0m                  [1m[96m------[0m [1m[96mrequired by a bound in this associated function[0m
[1m[96m...[0m
[1m[96m314[0m [1m[96m|[0m       F: Future<Output = Result<T, E>> + Send,
    [1m[96m|[0m                                          [1m[92m^^^^[0m [1m[92mrequired by this bound in `ResultFutureTag::future`[0m
    [1m[96m= [0m[1m[97mnote[0m: this error originates in the macro `__cmd__get_tables` which comes from the expansion of the macro `tauri::generate_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

[1m[97mFor more information about this error, try `rustc --explain E0599`.[0m
[1m[93mwarning[0m: `app` (lib) generated 1 warning
[1m[91merror[0m: could not compile `app` (lib) due to 5 previous errors; 1 warning emitted
